Updated *most* of the mod's features to 1.21